test/files/neg/t766.check
t766.scala:5: error: not found: value badIdentifier
      val p = badIdentifier
              ^
1 error
